--- a/views/chat_app.handlebars
+++ b/views/chat_app.handlebars
@@ -1,15 +1,61 @@
+<style>
+.container12 {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 650px;
+}
+
+.darker {
+    border-color: #ccc;
+    background-color: #ddd;
+}
+
+.container::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.container img {
+    float: left;
+    max-width: 60px;
+    width: 100%;
+    margin-right: 20px;
+    border-radius: 50%;
+}
+
+.container img.right {
+    float: right;
+    margin-left: 20px;
+    margin-right:0;
+}
+
+.time-right {
+    float: right;
+    color: #aaa;
+}
+
+.time-left {
+    float: left;
+    color: #999;
+}
+
+</style>
+
 <div class="page-header">
     <h2>Trip Private Chat Room</h2>
     <div class="page-header">
 	<h2>Welcome to the chat room of the trip:{{id}}</h2>
 </div>
-		
-            <div id="chat_hist">
+            
+<div class="row">
+	<div class="col-lg-8">
+        <div id="chat_hist">
                 {{!-- <input type="textArea" class="form-control" id="ChatArea" name="ChatArea" > --}}
             </div>
-<div class="row">
-	<div class="col-lg-12">
-
         <form role="form" action="/addChat/" name="chat_form" method="POST" id="mainDetailsForm">
 
         <input class="form-control" type='hidden' name='trip_id' value={{id}}>
@@ -81,16 +127,23 @@
                     for(var i = 0; i < len; i++) {
                         console.log(parsed_data[i].message);
                         let test;
-                        {{!-- if(request.session.userEmail==parsed_data.chat.user_email){
+                    {{!-- if(1){//request.session.userEmail==parsed_data.chat.user_email){ --}}
+test = "<div class='container12 darker' width='50%'><img src='/img/sender.jpg' alt='Avatar' class='right' style='width:50%'><p>"+parsed_data[i].user_email+"&nbsp:--&nbsp &nbsp &nbsp"+parsed_data[i].message+"</p></div>"
+                    {{!-- }else{
+test = "<div class='container12' width='50%'><img src='/img/other.jpg' alt='Avatar' class='right' style='width:50%'><p class='time-left'>"+parsed_data[i].message+"</p></div>"
+                    } --}}
+      {{!-- "<span class='time-left">11:01</span>" --}}
+                            {{!-- test = "<label style='float:left'>  "+parsed_data[i].message +"</label>"; --}}
+                           
+ {{!-- if(request.session.userEmail==parsed_data.chat.user_email){
                            test = "<label  value='{{json_data.chat[i].user_email}}+{{json_data.chat[i].message}}' style='float:right'>";
                         }else{ --}}
                             {{!-- test = "<label  value='{{json_data.chat[i].user_email}}+{{json_data.chat[i].message}}' style='float:left'>"; --}}
-                            test = "<label style='float:left'>  "+parsed_data[i].message +"</label>";
 
-                        {{!-- } --}}
+                        {{!-- } --}}                     
                     console.log(test);
                         $('#chat_hist').append(test);
-                        $('#chat_hist').append('<br>');
+                        //$('#chat_hist').append('<br>');
                     }
                 }
             }, error: function (request, status, error) {
