--- a/views/Splitwise.handlebars
+++ b/views/Splitwise.handlebars
@@ -12,6 +12,18 @@
     </div>
   </div>  
 
+  <div id="splits">
+      <p id="payer">Paid by :</p><p id="amount_paid">Amount in USD</p><p id="people_involved">People Involved: </p>
+      <table style="margin-top: 20px;" id="payeeList" class="table table-striped table-bordered table-dark table-condensed table-hover">
+            <thead>
+            <tr>
+                <th>User</th>
+                <th>Owes<th>
+            </tr>
+            </thead>
+        </table>
+  </div>
+
 <style>
     .splitwise-header{
         text-align: center;
@@ -59,6 +71,34 @@
                 console.log(request.responseText);
             }
         });
+
+    $.ajax({
+            type: "GET",
+            url: "/fetch_spils/{{id}}",
+            async: true,
+            success: function (json_data) {
+
+                if ($.trim(json_data)) {
+                    var len = json_data.splits.length;
+
+                    let new_row;
+                    $('payer').append(json_data.paid_by);
+                    $('amount_paid').append(json_data.total);
+                    $('payer').append(len);
+                    for(let i=0; i<len; i++){
+                        new_row = "<tr>" +
+                    "<td align='center'>" + json_data.splits[i].email + "</td>" +
+                    "<td align='center'>" + json_data.splits[i].owes + "</td>" +
+                    "</tr>"
+
+                        $('#payeeList').append(new_row);
+                    }
+                }
+            }, error: function (request, status,error){
+                alert("No data as of now");
+            }
+    });
+
 
     });
 </script>
