Splitwise handlebar changes

--- a/views/Splitwise.handlebars
+++ b/views/Splitwise.handlebars
@@ -97,7 +97,7 @@
                     }
                 }
             }, error: function (request, status,error){
-                alert("No data as of now");
+                //alert("No data as of now");
             }
     });
 
